[DEV] java 25 and spring boot 4.0.6